--- a/cfn/presenter.yaml
+++ b/cfn/presenter.yaml
@@ -19,13 +19,18 @@ Resources:
     Properties:
       Code:
         ZipFile: |-
-          exports.handler = async (event, context) => {
-            console.log("EVENT: \n" + JSON.stringify(event, null, 2));
-            return '{"message": "Hello, World!!"}';
-          }
+          import json
+          import boto3
+          def lambda_handler(event, context):
+            sqs = boto3.client("sqs", endpoint_url="https://sqs.ap-northeast-1.amazonaws.com")
+            
+            return {
+              'statusCode': 200,
+              'body': json.dumps('Hello from Lambda!')
+            }
       Role: !GetAtt LambdaServiceRole.Arn
       Handler: index.handler
-      Runtime: nodejs14.x
+      Runtime: python3.9
     DependsOn:
       - LambdaServiceRole
   HttpApi:
