--- a/cfn/presenter.yaml
+++ b/cfn/presenter.yaml
@@ -20,17 +20,26 @@ Resources:
       Code:
         ZipFile: |-
           import json
+          import os
           import boto3
           def lambda_handler(event, context):
+            queue_name = os.environ['QUEUE_NAME']
             sqs = boto3.client("sqs", endpoint_url="https://sqs.ap-northeast-1.amazonaws.com")
-            
+            try:
+              queue = sqs.get_queue_by_name(QueueName=queue_name)
+            except:
+              print('queue not found: ' + queue_name)
+
             return {
               'statusCode': 200,
               'body': json.dumps('Hello from Lambda!')
             }
       Role: !GetAtt LambdaServiceRole.Arn
-      Handler: index.handler
+      Handler: index.lambda_handler
       Runtime: python3.9
+      Environment:
+        Variables:
+          QUEUE_NAME: !ImportValue BatchQueueName
     DependsOn:
       - LambdaServiceRole
   HttpApi:
