--- a/cfn/presenter.yaml
+++ b/cfn/presenter.yaml
@@ -15,6 +15,15 @@ Resources:
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaSQSQueueExecutionRole"
+      Policies:
+        - PolicyName: DynamoAccessPolicy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+            - Effect: Allow
+              Action:
+              - dynamodb:*
+              Resource: !ImportValue StatusDBTableArn
   Lambda:
     Type: AWS::Lambda::Function
     Properties:
@@ -25,37 +34,61 @@ Resources:
           import boto3
 
           def lambda_handler(event, context):
-            queue_name = os.environ['QUEUE_NAME']
-            sqs = boto3.client("sqs", endpoint_url="https://sqs.ap-northeast-1.amazonaws.com")
             try:
-              response = sqs.get_queue_url(QueueName=queue_name)
-              queue_url = response['QueueUrl']
+              message_id = send_message_to_sqs(message='Hello')
             except Exception as e:
               print('Exception Message: ' + str(e))
-              print('queue not found: ' + queue_name)
-
+              print("Message wasn't sent: " + queue_name)
               return {
                 'statusCode': 500,
                 'body': json.dumps('Internal Server Error')
               }
             
             try:
-              response = sqs.send_message(QueueUrl=queue_url, MessageBody='Hello')
-              message_id = response['MessageId']
+              register_message_id(message_id)
             except Exception as e:
               print('Exception Message: ' + str(e))
-              print("Message wasn't sent")
-            
+              print("Message wasn't registered: " + queue_name)
+              return {
+                'statusCode': 500,
+                'body': json.dumps('Internal Server Error')
+              }
+          
             return {
               'statusCode': 200,
               'body': json.dumps('Hello from Lambda!')
             }
+          
+          def send_message_to_sqs(message):
+            queue_name = os.environ['QUEUE_NAME']
+            sqs = boto3.client("sqs", endpoint_url="https://sqs.ap-northeast-1.amazonaws.com")
+
+            response = sqs.get_queue_url(QueueName=queue_name)
+            queue_url = response['QueueUrl']
+
+            response = sqs.send_message(QueueUrl=queue_url, MessageBody='Hello')
+            return response['MessageId']
+          
+          def register_message_id(message_id):
+            table_name = os.environ['TABLE_NAME']
+            dynamoDB = boto3.resource('dynamodb')
+            table= dynamoDB.Table(table_name)
+            table.put_item(
+              Item = {
+                'EventId': message_id,
+                'Status': 'CREATED'
+                }
+                )
+
+            return
+
       Role: !GetAtt LambdaServiceRole.Arn
       Handler: index.lambda_handler
       Runtime: python3.9
       Environment:
         Variables:
           QUEUE_NAME: !ImportValue BatchQueueName
+          TABLE_NAME: !ImportValue StatusDBTable
     DependsOn:
       - LambdaServiceRole
   HttpApi:
