--- a/cfn/presenter.yaml
+++ b/cfn/presenter.yaml
@@ -24,7 +24,7 @@ Resources:
               Action:
               - dynamodb:*
               Resource: !ImportValue StatusDBTableArn
-  Lambda:
+  CreateAPILambda:
     Type: AWS::Lambda::Function
     Properties:
       Code:
@@ -53,10 +53,11 @@ Resources:
                 'statusCode': 500,
                 'body': json.dumps('Internal Server Error')
               }
+            result = {'message_id': message_id};
           
             return {
               'statusCode': 200,
-              'body': json.dumps('Hello from Lambda!')
+              'body': json.dumps(result)
             }
           
           def send_message_to_sqs(message):
@@ -102,24 +103,24 @@ Resources:
       ApiId: !Ref HttpApi
       StageName: "$default"
       AutoDeploy: true
-  HttpApiHelloIntegration:
+  HttpApiCreateIntegration:
     Type: AWS::ApiGatewayV2::Integration
     Properties:
       ApiId: !Ref HttpApi
       IntegrationType: AWS_PROXY
-      IntegrationUri: !GetAtt Lambda.Arn
+      IntegrationUri: !GetAtt CreateAPILambda.Arn
       PayloadFormatVersion: '2.0'
-  HttpApiHelloIntegrationPermission:
+  HttpApiCreateIntegrationPermission:
     Type: AWS::Lambda::Permission
     Properties:
       Action: lambda:InvokeFunction
-      FunctionName: !GetAtt Lambda.Arn
+      FunctionName: !GetAtt CreateAPILambda.Arn
       Principal: apigateway.amazonaws.com
-      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${HttpApi}/*/*/hello"
-  HttpApiHelloRoute:
+      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${HttpApi}/*/*/create"
+  HttpApiCreateRoute:
     Type: AWS::ApiGatewayV2::Route
     Properties:
       ApiId: !Ref HttpApi
-      RouteKey: GET /hello
+      RouteKey: GET /create
       AuthorizationType: NONE
-      Target: !Sub "integrations/${HttpApiHelloIntegration}"
+      Target: !Sub "integrations/${HttpApiCreateIntegration}"
